Upgraded and Dockerized